<resources>
    <string name="app_name">Instagram</string>
    <string name="post">POST</string>
    <string name="asdfasdfasdf">asdfasdfasdf</string>
    <string name="imageofadf">imageofadf</string>
    <string name="adfasdfadsqwef">adfasdfadsqwef</string>
    <string name="what_do_you_want_to_talk_about">What do you want to talk about?</string>
    <string name="mahesh_soni">Mahesh Soni</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_save_post">save_post</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Close_Drawer">close drawer </string>
    <string name="Open_Drawer">open drawer </string>
    <string name="my_name">MY Name</string>
    <string name="my_email_id">My Email id</string>
    <string name="my_photo">My photo</string>
    <string name="save_post">Save Post</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="po_st">PO st</string>
    <string name="text">text</string>
    <string name="_8942">⋮</string>
    <string name="something_in_your_mind">Something In Your Mind</string>
    <string name="edit">Edit</string>
    <string name="no_data_available">no_data_available</string>
    <string name="such_a_lonely_place">Such A Lonely Place</string>
    <string name="massage" />
    <string name="title_activity_latest_massage">LatestMassage</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_chat_log">ChatLogActivity</string>
    <string name="write_some_thing">Write Some Thing</string>
    <string name="latestmassage">LatestMassage</string>
</resources>