<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_save_like"
            android:checkable="true"
            android:icon="@drawable/ic_save"
            android:title="@string/save_post"
            android:visible="true" />

        <item
            android:id="@+id/nav_logout"
            android:checkable="true"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            android:visible="true" />

        <item
            android:id="@+id/nav_about"
            android:checkable="true"
            android:icon="@drawable/ic_info_button"
            android:title="@string/about"
            android:visible="true" />


    </group>


</menu>