<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:background="@color/blue"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activity.HeaderFile">

    <ImageView
        android:id="@+id/nav_profile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:clickable="true"
        android:contentDescription="@string/my_photo" />

    <TextView
        android:id="@+id/nav_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/nav_email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_email_id" />


</LinearLayout>